@@ -624,37 +624,31 @@ void ResourceMap::loadConfigurationFile()
 /* Load the configuration defined at installation time */
 void ResourceMap::loadDefaultConfiguration()
 {
-#ifdef R_EXECUTABLE
-  addAsString("R-executable-command", R_EXECUTABLE);
-#else
-  addAsString("R-executable-command", "");
-#endif
-  addAsString("csv-file-separator", ";");
 #ifndef _WIN32
-  addAsString("temporary-directory", "/tmp");
-  addAsUnsignedInteger("parallel-threads", sysconf(_SC_NPROCESSORS_CONF));
+  addAsString("Path-TemporaryDirectory", "/tmp");
+  addAsUnsignedInteger("TBB-ThreadsNumber", sysconf(_SC_NPROCESSORS_CONF));
 #else
-  addAsString("temporary-directory", "TEMP");
+  addAsString("Path-TemporaryDirectory", "TEMP");
   UnsignedInteger numberOfProcessors = 0;
   std::istringstream iss(getenv("NUMBER_OF_PROCESSORS"));
   iss >> numberOfProcessors;
-  addAsUnsignedInteger("parallel-threads", numberOfProcessors);
+  addAsUnsignedInteger("TBB-ThreadsNumber", numberOfProcessors);
 #endif
   if (const char* env_num_threads = std::getenv("OPENTURNS_NUM_THREADS"))
   {
     try {
-      setAsUnsignedInteger("parallel-threads", std::stoi(env_num_threads));
+      setAsUnsignedInteger("TBB-ThreadsNumber", std::stoi(env_num_threads));
     }
     catch (const std::invalid_argument &) {
       throw InternalException(HERE) << "OPENTURNS_NUM_THREADS must be an integer, got "<< env_num_threads;
     }
   }
-  addAsUnsignedInteger("cache-max-size", 1024);
-  addAsUnsignedInteger("output-files-timeout", 2);
+  addAsUnsignedInteger("Cache-MaxSize", 1024);
 
   // Os parameters
-  addAsBool("Os-create-process", "false");
+  addAsBool("Os-CreateProcess", "false");
   addAsBool("Os-RemoveFiles", "true");
+  addAsUnsignedInteger("OS-DeleteTimeout", 2);
 
   // XMLStorageManager parameters
   addAsUnsignedInteger("XMLStorageManager-DefaultCompressionLevel", 0);
@@ -722,6 +716,11 @@ void ResourceMap::loadDefaultConfiguration()
   addAsScalar("Text-DefaultTextSize", 0.75);
 
   // GraphImplementation parameters //
+#ifdef R_EXECUTABLE
+  addAsString("Graph-RExecutableCommand", R_EXECUTABLE);
+#else
+  addAsString("Graph-RExecutableCommand", "");
+#endif
   addAsScalar("Graph-DefaultHorizontalMargin", 0.05);
   addAsScalar("Graph-DefaultLegendFontSize", 1.0);
   addAsScalar("Graph-DefaultVerticalMargin", 0.05);
@@ -896,6 +895,7 @@ void ResourceMap::loadDefaultConfiguration()
   addAsUnsignedInteger("Field-LevelNumber", 30);
 
   // SampleImplementation parameters
+  addAsString("Sample-CSVFileSeparator", ";");
   addAsString("Sample-CommentMarkers", "#");
   addAsUnsignedInteger("Sample-PrintEllipsisSize", 3);
   addAsUnsignedInteger("Sample-PrintEllipsisThreshold", 1000);
