@@ -49,7 +49,7 @@ public:
 
   /** Factory of Sample from CSV file */
   static Sample ImportFromCSVFile(const FileName & fileName,
-                                  const String & csvSeparator = ResourceMap::GetAsString( "csv-file-separator" ));
+                                  const String & csvSeparator = ResourceMap::GetAsString( "Sample-CSVFileSeparator" ));
 
   /** Factory of Sample from Text file */
   static Sample ImportFromTextFile(const FileName & fileName,
@@ -61,7 +61,7 @@ public:
 
   /** Export Sample into CSV file */
   void exportToCSVFile(const FileName & fileName,
-                       const String & csvSeparator = ResourceMap::GetAsString( "csv-file-separator" )) const;
+                       const String & csvSeparator = ResourceMap::GetAsString( "Sample-CSVFileSeparator" )) const;
 
   /** Export a sample as a matrix, one row by realization, in a format suitable to exchange with R. */
   String streamToRFormat() const;
