@@ -476,7 +476,7 @@ public:
 
   /** Factory of SampleImplementation from CSV file */
   static SampleImplementation BuildFromCSVFile(const FileName & fileName,
-      const String & csvSeparator = ResourceMap::GetAsString( "csv-file-separator" ));
+      const String & csvSeparator = ResourceMap::GetAsString( "Sample-CSVFileSeparator" ));
 
   /** Factory of SampleImplementation from Text file */
   static SampleImplementation BuildFromTextFile(const FileName & fileName,
@@ -797,7 +797,7 @@ public:
 
   /** Save to CSV file */
   void exportToCSVFile(const FileName & filename,
-                       const String & csvSeparator = ResourceMap::GetAsString( "csv-file-separator" )) const;
+                       const String & csvSeparator = ResourceMap::GetAsString("Sample-CSVFileSeparator")) const;
 
   /** Method save() stores the object through the StorageManager */
   void save(Advocate & adv) const override;
