@@ -1,12 +1,10 @@
 %feature("docstring") OT::MemoizeFunction
-"Function which keep tracks of input and output.
+"Function which keeps tracks of input and output.
 
 When this function is evaluated, it calls the
 :class:`~openturns.Function` passed as argument, and store
 input and output :class:`~openturns.Sample`.
-
-Available constructors:
-    MemoizeFunction(*function, historyStrategy*)
+It also has a caching behavior, enabled by default.
 
 Parameters
 ----------
@@ -24,6 +22,7 @@ to retrieve this history from a :class:`~openturns.Function` object which
 is in fact a :class:`~openturns.MemoizeFunction`.
 Thus, if you create a :class:`~openturns.MemoizeFunction` from an unknown
 :class:`~openturns.Function`, it is better to call :meth:`clearHistory`.
+The cache size is initialized by the value of the :class:`~openturns.ResourceMap` `Cache-MaxSize` entry.
 
 See also
 --------
@@ -78,7 +77,7 @@ Returns
 -------
 isCacheEnabled : bool
     Flag telling whether the cache mechanism is enabled.
-    It is disabled by default."
+    It is enabled by default."
 
 // ---------------------------------------------------------------------
 
