@@ -1,7 +1,7 @@
 %feature("docstring") OT::TBB
 "Threading parameters.
 
-The number of threads is the value associated to the `parallel-threads` key
+The number of threads is the value associated to the `TBB-ThreadsNumber` key
 in :class:`~openturns.ResourceMap`, which is initialized to the available cpus,
 and can be overriden by the `OPENTURNS_NUM_THREADS` environment variable."
 
